frontend: fixed safari overflow?

--- a/projects/site/src/sass/global.scss
+++ b/projects/site/src/sass/global.scss
@@ -1,3 +1,12 @@
+body {
+  font-family: sans-serif;
+  text-decoration: none;
+  margin: 0;
+  @include applyTextColor("bg");
+  min-height: -webkit-fill-available;
+}
+
+
 .background {
   @include applyTextColor("bg");
   width: 100%;
